--- a/images/style.css
+++ b/images/style.css
@@ -2,13 +2,41 @@ body{
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
-    width: 485px;
-    
-}
-header{
-    display: center;
+    width: 485px;   
 }
 html{
     
     background-color: #000000;
+}
+header,h2{
+    text-transform:uppercase;  
+}
+h1{
+    color: #007d7b;
+    background-color: #ffffff;
+    text-align:center;
+}
+/*navigation*/
+nav h2 {
+    visibility:hidden;
+    height:1px;
+  }
+  nav li {
+    display:inline-flex;
+
+  }
+  nav {
+    padding:25px;
+    background-color:#000000;
+  }
+  nav a {
+    background-color:rgba(255,255,255,.35); 
+    padding:20px;
+    border-radius:10px;
+    width:80px;
+    text-decoration:none;
+    color: #ffffff;
+    font-weight:bold;
+    text-transform:uppercase;
+    text-align:center;
 }
