style of phoe look

--- a/images/style.css
+++ b/images/style.css
@@ -1,3 +1,14 @@
+p {
+    font-size: 1.25em;
+}
+figcaption, label, input, small {
+    font-size: 1em;
+}
+nav a {
+    font-size: 1.5em;
+}
+h2 {font-size: 2em;}
+
 body{
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,12 +20,15 @@ html{
     background-color: #000000;
 }
 header,h2{
-    text-transform:uppercase;  
+    text-transform:uppercase; 
+    text-align:center;
 }
 h1{
     color: #007d7b;
     background-color: #ffffff;
     text-align:center;
+    padding: 5px;
+    font-size: 3em;
 }
 /*navigation*/
 nav h2 {
@@ -26,17 +40,22 @@ nav h2 {
 
   }
   nav {
-    padding:25px;
+    padding:5px;
     background-color:#000000;
   }
-  nav a {
-    background-color:rgba(255,255,255,.35); 
+  nav a { 
     padding:20px;
-    border-radius:10px;
-    width:80px;
+    width:50px;
     text-decoration:none;
     color: #ffffff;
     font-weight:bold;
     text-transform:uppercase;
     text-align:center;
+}
+[href="#top"] {
+    position:fixed;
+    bottom:0px;
+    right:0px;
+    border-radius:5px 0 0px 0px;
+    background-color:rgba(255,255,255,.35);
 }
