--- a/images/style.css
+++ b/images/style.css
@@ -31,21 +31,16 @@ h1{
     font-size: 3em;
 }
 /*navigation*/
-nav h2 {
-    visibility:hidden;
-    height:1px;
-  }
   nav li {
     display:inline-flex;
 
   }
   nav {
-    padding:5px;
+    padding:3px;
     background-color:#000000;
   }
   nav a { 
-    padding:20px;
-    width:50px;
+    padding:15px;
     text-decoration:none;
     color: #ffffff;
     font-weight:bold;
@@ -58,4 +53,7 @@ nav h2 {
     right:0px;
     border-radius:5px 0 0px 0px;
     background-color:rgba(255,255,255,.35);
+}
+figcaption{
+    position: ;
 }
