--- a/images/style.css
+++ b/images/style.css
@@ -59,13 +59,29 @@ figcaption{
     position:relative;
     top: -270px ;
     text-align:center;
+    text-transform: uppercase;
     
 }
-/*figcaption::nth-child(7){
-   position: relative; 
-   top:-60px;
+.bottom-white{
+    color:#ffffff;
+    position: relative;
+    top: -40px;
 }
-
+.white{
+    color: #ffffff;
+}
+.top{
+    position:relative; 
+    top:-260px;
+}
+.top-2{
+    position: relative;
+    top: -600px ;
+}
+.bottom{
+    position: relative;
+    top:-40px;
+}
 /* contact part*/
 #contact{
     background-color:#000000;
@@ -126,4 +142,16 @@ footer{
     text-align: center;
     color: #ffffff;
     background-color:#000000 ;
+    text-transform: uppercase;
+}
+@media (min-width: 880px) {
+    figure{
+    display: grid;
+    grid-template-columns: 2fr; 
+    grid-template-rows: repeat(4, 2fr);
+    }
+
+}
+@media (min-width: 1300px) {
+
 }
